# OrbitQuant

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-kernels.yml  ci.yml  publish-pypi.yml  windows-vulkan.yml
docs/: flux2-klein-9b-sdnq-vs-orbitquant.md  kernel-audit.md  kernel-hub-approval-request.md  paper-methodology-audit.md  publication-checklist.md  release-0.1.0.md  release-0.1.1.md  release-0.1.2.md  release-0.1.3.md  release-0.1.4.md  release-0.1.6.md  release-gates.md
native-kernels/orbitquant-packed-matmul/: CARD.md  build.toml  example.py  flake.nix
native-kernels/orbitquant-packed-matmul/benchmarks/: benchmark.py
native-kernels/orbitquant-packed-matmul/orbitquant_packed_matmul_cpu/: cpu_isa.cpp  cpu_kernel_args.h  cpu_msvc_avx2.cpp  cpu_pool.cpp  cpu_pool.h  cpu_threads.cpp  cpu_threads.h  packed_adaln_cpu.cpp  packed_matmul_cpu.cpp  packed_matmul_cpu.h  packed_matmul_neon.cpp  packed_matmul_scalar.cpp  packed_matmul_x86.cpp  packed_matmul_x86_avx512.cpp  quantize_activations_cpu.cpp
native-kernels/orbitquant-packed-matmul/orbitquant_packed_matmul_cuda/: packed_matmul.cu
native-kernels/orbitquant-packed-matmul/orbitquant_packed_matmul_metal/: packed_matmul.metal  packed_matmul.mm
native-kernels/orbitquant-packed-matmul/scripts/: prepare_wheel_project.py
native-kernels/orbitquant-packed-matmul/tests/: __init__.py  test_packed_matmul.py
native-kernels/orbitquant-packed-matmul/torch-ext/: torch_binding.cpp  torch_binding.h
native-kernels/orbitquant-packed-matmul/torch-ext/orbitquant_packed_matmul/: __init__.py
native-kernels/orbitquant-vulkan/: CMakeLists.txt  OrbitLinear.cpp
native-kernels/orbitquant-vulkan/glsl/: orbitquant_pack_w4_transposed.glsl  orbitquant_pack_w4_transposed.yaml  orbitquant_rpbh_w4.glsl  orbitquant_rpbh_w4.yaml  orbitquant_token_norm.glsl  orbitquant_token_norm.yaml  orbitquant_w4a4_lut.glsl  orbitquant_w4a4_lut.yaml  orbitquant_w4a4_lut_tiled.glsl  orbitquant_w4a4_lut_tiled.yaml
native-kernels/orbitquant-vulkan/tests/: OrbitLinearTest.cpp
reports/: native-smoke-2026-07-06.md  triton-cuda-kernel-2026-07-06.md
reports/gpu-validation/: rtx-pro-6000-cuda-kernel-validation-2026-07-06.md  rtx-pro-6000-cuda-kernel-validation-2026-07-06.txt  rtx-pro-6000-kernel-bench-2026-07-07.md
scripts/: measure_streaming_load_memory.py  run_cuda_kernel_checks.sh  run_hf_compat_checks.sh  run_mps_kernel_checks.sh  run_paper_methodology_checks.sh  runpod_ssh_health.sh  verify_hf_kernel_model_artifact.py
src/orbitquant/: __init__.py  adaln.py  benchmarks.py  checkpoint_streaming.py  config.py  errors.py  functional.py  hub.py  layers.py  linear_adapters.py  modeling.py  pipeline.py  quantizer.py  recipes.py  streaming.py  transformers_ops.py
src/orbitquant/artifacts/: __init__.py  assets.py  benchmark.py  checksums.py  comparisons.py  loader.py  manifest.py  model_card.py  refresh.py  repair.py  validator.py  writer.py
src/orbitquant/cli/: __init__.py  main.py
src/orbitquant/codebooks/: __init__.py  lloyd_max.py
src/orbitquant/eval/: __init__.py  assets.py  external_export.py  external_metrics.py  external_plan.py  metrics.py  native_plan.py  native_runner.py  native_settings.py  prompts.py  report.py
src/orbitquant/kernels/: __init__.py  dispatch.py  executorch_vulkan.py  mps.py  native_packed_matmul.py  provision.py  triton_cuda.py
src/orbitquant/kernels/_jit_support/: registration.h
src/orbitquant/packing/: __init__.py  bitpack.py
src/orbitquant/policies/: __init__.py  flux.py  flux2.py  generic_dit.py  lowbit_protection.py  wan.py  z_image.py
src/orbitquant/rotations/: __init__.py  fwht.py  rpbh.py
tests/: conftest.py  hub_helpers.py  test_adaln_rtn.py  test_artifact_writer.py  test_backend_capabilities_golden.py  test_benchmarks.py  test_bitpack.py  test_ci.py  test_cli.py  test_cli_artifact_validation.py  test_cli_compare_and_validate.py  test_cli_generate.py  test_cli_generate_pack.py  test_cli_hub.py  test_cli_info_and_bench.py  test_cli_plans_and_scripts.py  test_cli_quantize_and_policy.py  test_cli_report.py  test_codebooks.py  test_config.py  test_diffusers_modelmixin_integration.py  test_distribution.py  test_documentation.py  test_eval_assets.py  test_eval_prompts.py  test_eval_report.py  test_external_eval_plan.py  test_external_export.py  test_hub.py  test_hub_audit.py  test_hub_fetch.py  test_hub_native_smoke_proof.py  test_hub_repair.py  test_hub_upload.py  test_kernel_model_verifier.py  test_kernel_provision.py  test_kernels.py  test_linear_adapters.py  test_lowbit_protection.py  test_manifest.py  (+25 more)
