[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "orbitquant"
version = "0.2.2"
description = "Calibration-free OrbitQuant for transformer linear projections"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "WaveCut" }]
keywords = ["diffusion", "quantization", "transformers", "diffusers", "orbitquant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "huggingface_hub>=0.33",
  "numpy>=2.0",
  "packaging>=24.0",
  "safetensors>=0.5",
  "torch>=2.5",
  "tqdm>=4.66",
]

[project.optional-dependencies]
hf = [
  "accelerate>=1.8",
  "diffusers>=0.35",
  "transformers>=4.53",
]
kernels = [
  "kernels>=0.16",
  "triton>=3.5; platform_system == 'Linux'",
]
eval = [
  "imageio>=2.37",
  "imageio-ffmpeg>=0.6",
  "pillow>=11.0",
]
dev = [
  "pytest>=8.4",
  "pytest-xdist>=3.8",
  "ruff>=0.12",
]

[project.scripts]
orbitquant = "orbitquant.cli.main:main"

[project.urls]
Homepage = "https://github.com/iamwavecut/OrbitQuant"
Repository = "https://github.com/iamwavecut/OrbitQuant"
Issues = "https://github.com/iamwavecut/OrbitQuant/issues"
Paper = "https://arxiv.org/abs/2607.02461"

[tool.hatch.build.targets.wheel]
packages = ["src/orbitquant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["kernels_ci: native kernel package checks run by kernel-builder CI"]
