[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "orbitquant"
version = "0.8.0"
description = "Calibration-free OrbitQuant for transformer linear projections"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "WaveCut" }]
keywords = ["diffusion", "quantization", "transformers", "diffusers", "orbitquant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "huggingface_hub>=0.33",
  "numpy>=2.0",
  "packaging>=24.0",
  "safetensors>=0.5",
  "torch>=2.5",
  "tqdm>=4.66",
]

[project.optional-dependencies]
hf = [
  "accelerate>=1.8",
  "diffusers>=0.35",
  "transformers>=4.53",
]
kernels = [
  "triton>=3.5; platform_system == 'Linux'",
]
eval = [
  "imageio>=2.37",
  "imageio-ffmpeg>=0.6",
  "pillow>=11.0",
]
dev = [
  "psutil>=7.0",
  "pytest>=8.4",
  "pytest-xdist>=3.8",
  "ruff>=0.12",
]

[project.scripts]
orbitquant = "orbitquant.cli.main:main"

[project.urls]
Homepage = "https://github.com/iamwavecut/OrbitQuant"
Repository = "https://github.com/iamwavecut/OrbitQuant"
Issues = "https://github.com/iamwavecut/OrbitQuant/issues"
Paper = "https://arxiv.org/abs/2607.02461"

[tool.hatch.build.targets.wheel]
packages = ["src/orbitquant"]

# Bundle the native kernel sources so the runtime JIT fallback can build the
# packed matmul package outside a repository checkout.
[tool.hatch.build.targets.wheel.force-include]
"native-kernels/orbitquant-packed-matmul/torch-ext" = "orbitquant/_kernel_src/torch-ext"
"native-kernels/orbitquant-packed-matmul/orbitquant_packed_matmul_cpu" = "orbitquant/_kernel_src/orbitquant_packed_matmul_cpu"
"native-kernels/orbitquant-packed-matmul/orbitquant_packed_matmul_cuda" = "orbitquant/_kernel_src/orbitquant_packed_matmul_cuda"

[tool.hatch.build.targets.sdist]
include = ["src", "native-kernels", "tests", "docs", "scripts", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["kernels_ci: native kernel package checks run by kernel-builder CI"]
